code/section-02-mini-app/infra/k8s/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: posts
spec:
  selector:
    app: posts
  ports:
    - port: 4000
      targetPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: comments
spec:
  selector:
    app: comments
  ports:
    - port: 4001
      targetPort: 4001
---
apiVersion: v1
kind: Service
metadata:
  name: query
spec:
  selector:
    app: query
  ports:
    - port: 4002
      targetPort: 4002
---
apiVersion: v1
kind: Service
metadata:
  name: moderation
spec:
  selector:
    app: moderation
  ports:
    - port: 4003
      targetPort: 4003
---
apiVersion: v1
kind: Service
metadata:
  name: event-bus
spec:
  selector:
    app: event-bus
  ports:
    - port: 4005
      targetPort: 4005
