code/section-02-mini-app/infra/k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  annotations:
      nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
   - host: posts.com
     http:
      paths:
        - path: /posts/create
          pathType: Prefix
          backend:
            service:
              name: posts
              port:
                number: 4000
        - path: /posts
          pathType: Prefix
          backend:
            service:
              name: query
              port:
                number: 4002
        - path: /posts/?(.*)/comments
          pathType: ImplementationSpecific
          backend:
            service:
              name: comments
              port:
                number: 4001
        - path: /?(.*)
          pathType: ImplementationSpecific
          backend:
            service:
              name: client-service
              port:
                number: 3000
